# 2d-brawler-engine

./: .gitignore  Cargo.toml  LICENSE  NEXT_WEEK_ROADMAP.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: project-status.md
docs/api/: engine-api.md
docs/architecture/: engine-architecture.md
docs/design/: game-design.md
docs/implementation/: enemy-system-completion-summary.md  localization-implementation-plan.md  phase-1-plan.md  phase-1-status.md  phase-1-technical-breakdown.md  phase-2-kickoff.md  phase-2-plan.md  phase-2-progress-summary.md  phase-2-tasks.md  phase-2-technical-guide.md  phase-3-kickoff.md  phase-3-plan.md  phase-3-progress-summary.md  phase-3-tasks.md  phase-3-week-10-content-completion-plan.md  phase-3-week-8-detailed-plan.md  phase-3-week-9-implementation-plan.md  phase-4-5-implementation-plan.md  technical-architecture-evolution.md
docs/progress/: next-phase-recommendations.md  next-week-plan-2025-09-25.md  phase-3-completion-summary.md  weekly-summary-2025-09-25.md
src/: main.rs
src/engine/: mod.rs
src/engine/achievements/: achievement.rs  category.rs  manager.rs  mod.rs  progress.rs  reward.rs
src/engine/animation/: animation.rs  controller.rs  mod.rs  renderer.rs  state_machine.rs
src/engine/asset/: mod.rs
src/engine/audio/: audio_effects.rs  audio_manager.rs  audio_processing.rs  dynamic_mixing.rs  mod.rs  reverb.rs  spatial_audio.rs
src/engine/completion/: completion_rewards.rs  completion_tracker.rs  (+4 more)
src/game/: mod.rs
src/platform/: mod.rs
(+112 files in other folders)
